pp corrections for pp tracking added

--- a/README
+++ b/README
@@ -1,19 +1,23 @@
+//include the header
+#include "fragmentation_JEC.h"
+
 // before the event loop do
  
- fragmentation_JEC *FF_JEC=new fragmentation_JEC(RADIUS);
+ fragmentation_JEC *FF_JEC=new fragmentation_JEC(radius, do_PbPb, do_pp_tracking); //3rd variable is only for when do_PbPb is false
  FF_JEC->set_correction();
  
 // In the event loop for each jet count the number of PF candidates
 
-    int ntrk=0;
+    int npf=0;
     for(int ipf=0;ipf<fpf->nPFpart;ipf++){
      if(doPP){
-      if(FF_JEC->passes_PF_selection(fpf->pfPt[ipf], fpf->pfEta[ipf], fpf->pfPhi[ipf], fpf->pfId[ipf], fjet->jteta[ijet], fjet->jtphi[ijet])) ntrk++;
+      if(FF_JEC->passes_PF_selection(fpf->pfPt[ipf], fpf->pfEta[ipf], fpf->pfPhi[ipf], fpf->pfId[ipf], fjet->jteta[ijet], fjet->jtphi[ijet])) npf++;
       }else{
-      if(FF_JEC->passes_PF_selection(fpf->pfVsPt[ipf], fpf->pfEta[ipf], fpf->pfPhi[ipf], fpf->pfId[ipf], fjet->jteta[ijet], fjet->jtphi[ijet])) ntrk++;
+      if(FF_JEC->passes_PF_selection(fpf->pfVsPt[ipf], fpf->pfEta[ipf], fpf->pfPhi[ipf], fpf->pfId[ipf], fjet->jteta[ijet], fjet->jtphi[ijet])) npf++;
      }
     }
 
 //Then get the corrected pt for each jet before dijet selection by doing
 
-    double corrected_pt=FF_JEC->get_corrected_pt(fjet->jtpt[ijet], ntrk, hiBin);
+   if(do_PbPb) double corrected_pt=FF_JEC->get_corrected_pt(fjet->jtpt[ijet], npf, hiBin);
+   else double corrected_pt=FF_JEC->get_corrected_pt(fjet->jtpt[ijet], npf);
