--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 
 // before the event loop do
  
- fragmentation_JEC *FF_JEC=new fragmentation_JEC(radius, do_PbPb, do_pp_tracking); //3rd variable is only for when do_PbPb is false
+ fragmentation_JEC *FF_JEC=new fragmentation_JEC(radius, do_PbPb, do_pp_tracking,do_residual_correction); //3rd variable is only for when do_PbPb is false
  FF_JEC->set_correction();
  
 // In the event loop for each jet count the number of PF candidates
@@ -21,3 +21,5 @@
 
    if(do_PbPb) double corrected_pt=FF_JEC->get_corrected_pt(fjet->jtpt[ijet], npf, hiBin);
    else double corrected_pt=FF_JEC->get_corrected_pt(fjet->jtpt[ijet], npf);
+   
+   if(do_residual_correction) residual_corrected_pt=FF_JEC->get_residual_corrected_pt(corrected_pt,cent);
