corrections for all cone sizes

--- a/README
+++ b/README
@@ -4,6 +4,7 @@
 // Initialize the corrections
  
  fragmentation_JEC *FF_JEC=new fragmentation_JEC(radius, do_PbPb, do_pp_tracking,do_residual_correction,nstep_residual); //3rd variable is only for when do_PbPb is false
+ FF_JEC->set_effcorrection();
  FF_JEC->set_correction();
 
 // For each event
@@ -27,7 +28,7 @@
     }
 	npf/=eff;
 
-//Then get the corrected pt for each jet before dijet selection by doing
+//Then get the corrected pt for each jet before dijet selection
 
    if(do_PbPb) double corrected_pt=FF_JEC->get_corrected_pt(fjet->jtpt[ijet], npf, hiBin);
    else double corrected_pt=FF_JEC->get_corrected_pt(fjet->jtpt[ijet], npf);
